# command-unix-for-opam

./: CHANGES.md  README.md  command-unix-for-opam.opam  dune-project  index.html
.github/workflows/: ci.yml
command-unix-for-opam/: db.js  index.html
command-unix-for-opam/Command_unix_for_opam/: index.html
src/: command_unix_for_opam.ml  command_unix_for_opam.mli  dune
test/src/: dune  test_command.ml  test_command.mli
